# MiniEngine-Lab

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/: CODEOWNERS
apps/toolserver/: CMakeLists.txt  main.cpp
assets/: README.md
assets/config/: crops.json  items.json  time.json
assets/maps/: demo.tmj  farm_demo.tmj
assets/shaders/: sprite.hlsl
docs/: PROGRESS.md  ui-editor-frontend-prompt.md
docs/architecture/: 0001-m3-tilemap.md  0002-m4-scene-components.md  0003-m5-command.md  0004-m6-toolapi.md  0005-m7-editor.md  0006-m8-1-time-system.md  0007-m8-2-crop-growth.md  0008-m9-1-toolserver-http-transport.md  0009-m8-3-inventory.md
docs/superpowers/plans/: 2026-06-17-m0-foundation.md  2026-06-18-m1-sprite-on-screen.md  2026-06-19-m2-spritebatch-camera.md  2026-06-20-m3-tilemap.md  2026-06-20-m4-scene-components.md  2026-06-20-m5-command.md  2026-06-21-m6-toolapi.md  2026-06-21-m7-editor.md  2026-06-21-m8-1-time-system.md  2026-06-22-m8-2-crop-growth.md  2026-06-23-m8-3-inventory.md  2026-06-23-m9-1-toolserver-http-transport.md
docs/superpowers/specs/: 2026-06-17-miniengine-design.md  2026-06-19-m2-spritebatch-camera-design.md  2026-06-20-m3-tilemap-design.md  2026-06-20-m5-command-design.md  2026-06-21-m7-editor-design.md  2026-06-21-m8-1-time-system-design.md  2026-06-22-m8-2-crop-growth-design.md  2026-06-22-toolserver-http-transport-design.md  2026-06-23-m8-3-inventory-design.md
engine/assets/: CMakeLists.txt  README.md
engine/assets/include/me/assets/: ImageData.h  TileGeometry.h  TileLayout.h  TileMapData.h  TiledMapLoader.h
engine/assets/src/: ImageLoader.cpp  TiledMapLoader.cpp  stb_image_impl.cpp
engine/command/: CMakeLists.txt  README.md
engine/core/: CMakeLists.txt  README.md
engine/core/include/me/core/: AABB.h  Assert.h  Handle.h  Log.h  MathConstants.h  Matrix4x4.h  Rect.h  Transform2D.h  Vector2.h  Vector3.h  Vector4.h  Version.h
engine/core/src/: AABB.cpp  Assert.cpp  Log.cpp  Matrix4x4.cpp  Rect.cpp  Transform2D.cpp  Vector2.cpp  Vector3.cpp  Version.cpp
engine/domain/: CMakeLists.txt  README.md
engine/domain/include/me/domain/: CropConfig.h  FarmField.h  Inventory.h  ItemConfig.h  TimeConfig.h  TimeSystem.h
engine/domain/src/: CropConfig.cpp  FarmField.cpp  Inventory.cpp  ItemConfig.cpp  TimeConfig.cpp  TimeSystem.cpp
engine/editor/: CMakeLists.txt  README.md
engine/editor/include/me/editor/: EditorController.h  EditorDto.h
engine/editor/src/: EditorController.cpp
engine/platform/: CMakeLists.txt  README.md
engine/platform/include/me/platform/: FileSystem.h  Input.h  Platform.h  Time.h  Window.h
engine/platform/src/: FileSystem.cpp  Input.cpp  Input_Win32.cpp  Platform.cpp  Time.cpp  Window_Win32.cpp
engine/renderer/: CMakeLists.txt  README.md
engine/renderer/include/me/render/: OrthographicCamera.h  SpriteBatch.h  SpriteDesc.h  SpriteRenderer.h  TileMapRenderer.h  Tileset.h
engine/renderer/src/: SpriteBatch.cpp  SpriteRenderer.cpp  TileMapRenderer.cpp
engine/rhi/: CMakeLists.txt  README.md
engine/rhi/include/me/rhi/: CommandContext.h  D3DCommon.h  DescriptorAllocatorLogic.h  DescriptorHeap.h  Fence.h  FenceTracker.h  FrameRing.h  GpuBuffer.h  GpuDevice.h  GpuTexture.h  QuadGeometry.h  Readback.h  Shader.h  SpriteTransform.h  SwapChain.h
engine/rhi/src/: CommandContext.cpp  D3DCommon.cpp  DescriptorHeap.cpp  Fence.cpp  GpuBuffer.cpp  GpuDevice.cpp  GpuTexture.cpp  Readback.cpp  Shader.cpp  SwapChain.cpp
engine/scene/: CMakeLists.txt  README.md
engine/scene/include/me/scene/: CameraView.h  ComponentStorage.h  Components.h  Entity.h  RenderSystem.h  RenderView.h  Scene.h  TransformSystem.h
engine/scene/src/: RenderSystem.cpp  Scene.cpp  TransformSystem.cpp
engine/toolapi/: CMakeLists.txt  README.md
engine/toolapi/include/me/toolapi/: ITool.h  Permission.h  SchemaValidator.h  ToolContext.h  ToolInvocation.h  ToolRegistry.h  ToolResult.h
engine/toolapi/include/me/toolapi/tools/: BuiltinTools.h
engine/toolapi/src/: SchemaValidator.cpp  ToolInvocation.cpp  ToolRegistry.cpp  ToolResult.cpp
engine/toolapi/src/tools/: BuiltinTools.cpp  CropTools.cpp  InventoryTools.cpp  MutationTools.cpp  QueryTools.cpp  TimeTools.cpp
engine/toolserver/: CMakeLists.txt  README.md
engine/toolserver/include/me/toolserver/: HttpToolServer.h  ToolDispatcher.h
engine/toolserver/src/: HttpToolServer.cpp  ToolDispatcher.cpp
sandbox/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/assets/: test_image.cpp  test_tile_geometry.cpp  test_tile_layout.cpp  test_tiled_loader.cpp
tests/assets/fixtures/: bad.tmj  bad_data.tmj  demo.tmj
tests/command/: test_command_stack.cpp  test_create_entity_cmd.cpp  test_destroy_entity_cmd.cpp  test_set_transform_cmd.cpp
tests/core/: test_handle.cpp  test_log.cpp  test_matrix.cpp  test_rect_aabb.cpp  test_smoke.cpp  test_transform2d.cpp  test_vector2.cpp  test_vector34.cpp
tests/domain/: test_crop_config.cpp  test_farm_field.cpp  test_inventory.cpp  test_item_config.cpp  test_time_config.cpp  test_time_system.cpp
tests/editor/: test_editor_controller.cpp
tests/gpu/: test_device_fence.cpp  test_dynamic_buffer.cpp  test_sprite_batch.cpp  test_sprite_render.cpp  test_texture_roundtrip.cpp  test_tilemap_render.cpp
tests/platform/: test_filesystem.cpp  test_input.cpp  test_time.cpp
tests/render/: test_camera.cpp
tests/rhi/: test_rhi_logic.cpp
tests/scene/: test_camera_system.cpp  test_component_snapshot.cpp  test_component_storage.cpp  test_entity.cpp  test_entity_id.cpp  test_render_system.cpp  test_transform_hierarchy.cpp
tests/toolapi/: test_builtin_integration.cpp  test_crop_tools.cpp  test_inventory_tools.cpp  test_invocation_log.cpp  test_mutation_tools.cpp  test_permission.cpp  test_query_tools.cpp  test_registry.cpp  test_schema_validator.cpp  test_time_tools.cpp  test_tool_result.cpp
tests/toolserver/: test_tool_dispatcher.cpp
tools/: gen_tileset.py  pack_atlas.py
tools/editor-frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+43 files in other folders)
